[package]
name = "ferrumDF"
version = "0.0.9"
authors = ["Gandalf the grey"]
edition = "2021"
description = "A data frame library written to work with my ml crate ferrumML"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.3.0"
rand = "0.8.5"
rayon = "1.8.0"

[profile.dev]
opt-level = 3

[profile.release]
opt-level = 3
